tests/neg/java-fake-ann/Test.scala
@FakeAnn def test = // error
  (1: @FakeAnn) // error
